--- a/common-exception-model/pom.xml
+++ b/common-exception-model/pom.xml
@@ -45,6 +45,11 @@
   <dependencies>
     <dependency>
       <groupId>org.bremersee</groupId>
+      <artifactId>common-exception</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bremersee</groupId>
       <artifactId>common-xml</artifactId>
     </dependency>
     <dependency>
@@ -62,6 +67,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
