Inits Common Exception Model.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <module>common-exception</module>
     <module>common-exception-model</module>
     <module>common-exception-spring-web</module>
+    <module>common-exception-spring-webflux</module>
+    <module>common-exception-feign</module>
   </modules>
 
   <properties>
