--- a/common-exception-spring-web/pom.xml
+++ b/common-exception-spring-web/pom.xml
@@ -46,9 +46,15 @@
   <dependencies>
     <dependency>
       <groupId>org.bremersee</groupId>
+      <artifactId>common-exception</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bremersee</groupId>
       <artifactId>common-exception-model</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
