--- a/common-exception-model/pom.xml
+++ b/common-exception-model/pom.xml
@@ -43,14 +43,6 @@
   </licenses>
 
   <dependencies>
-    <!--
-    <dependency>
-      <groupId>org.bremersee</groupId>
-      <artifactId>common-exception</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    -->
-
     <dependency>
       <groupId>org.bremersee</groupId>
       <artifactId>common-xml-adapter</artifactId>
@@ -95,13 +87,13 @@
     </dependency>
 
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
