--- a/common-exception-spring-web/pom.xml
+++ b/common-exception-spring-web/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-exception-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-exception-spring-web</artifactId>
