--- a/common-exception-spring-webmvc/pom.xml
+++ b/common-exception-spring-webmvc/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>common-exception-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-exception-spring-webmvc</artifactId>
@@ -53,10 +53,9 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
