--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath/>
   </parent>
 
@@ -91,17 +91,5 @@
       </url>
     </site>
   </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>build-system</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <argLine>-Dorg.bremersee.test.executor=BUILD_SYSTEM</argLine>
-      </properties>
-    </profile>
-  </profiles>
 
 </project>
