--- a/common-exception-spring-boot-webflux-starter/pom.xml
+++ b/common-exception-spring-boot-webflux-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-exception-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>common-exception-spring-boot-webflux-starter</artifactId>
