--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.1</version>
     <relativePath/>
   </parent>
 
