--- a/common-exception-model/pom.xml
+++ b/common-exception-model/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-exception-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
 
   <artifactId>common-exception-model</artifactId>
