--- a/common-exception-spring-webmvc/pom.xml
+++ b/common-exception-spring-webmvc/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>common-exception-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>1.1.1</version>
+    <version>1.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-exception-spring-webmvc</artifactId>
